<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPacientes"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:onClick="goToPacientes"
        android:text="@string/btnPacientes"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCamara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:onClick="goToCamara"
        android:text="@string/btnCamara"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGaleria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/btnGaleria"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:onClick="goToGaleria"
        android:paddingLeft="18dp"
        android:paddingTop="6dp"
        android:paddingRight="18dp"
        android:paddingBottom="6dp"
        android:text="@string/btnGaleria"
        android:textSize="18sp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="218dp"
        android:contentDescription="@string/imgLogoDescription"
        android:src="@drawable/imil_vet_logos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnMusicaOn"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:onClick="turnOnMusic"
        android:text="@string/btnMusicaOn"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPacientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMusicaOff"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:onClick="turnOffMusic"
        android:text="@string/btnMusicaOff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMusicaOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMusicaOn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>